After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 618936 - [dshowvideosink] close the created window in ::stop()
[dshowvideosink] close the created window in ::stop()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Windows
: Normal normal
: 0.10.20
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-05-17 21:36 UTC by Andoni Morales
Modified: 2010-08-14 13:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-dshowvideosink-Close-our-created-window-in-READY-to-.patch (2.34 KB, patch)
2010-05-17 21:36 UTC, Andoni Morales
committed Details | Review

Description Andoni Morales 2010-05-17 21:36:11 UTC
Created attachment 161282 [details] [review]
0001-dshowvideosink-Close-our-created-window-in-READY-to-.patch

When no window id is passed and the element creates a new one, it doesn't close it in ::stop(), so each transition creates a new window.