Close the created window ::stop() to avoid having a new window on each transition https://bugzilla.gnome.org/show_bug.cgi?id=618936