Main/GStreamer/Source/gst-plugins-bad/sys/dshowvideosink/dshowvideosink.cpp
@@ -212,6 +212,7 @@ gst_dshowvideosink_clear (GstDshowVideoSink *sink)
 
   sink->window_closed = FALSE;
   sink->window_id = NULL;
+  sink->is_new_window = FALSE;
 
   sink->connected = FALSE;
   sink->graph_running = FALSE;
@@ -578,6 +579,8 @@ gst_dshowvideosink_window_thread (GstDshowVideoSink * sink)
     return NULL;
   }
 
+  sink->is_new_window = TRUE;
+
   SetWindowLongPtr (video_window, GWLP_USERDATA, (LONG)sink);
 
   sink->window_id = video_window;
@@ -671,6 +674,7 @@ static void gst_dshowvideosink_set_window_for_renderer (GstDshowVideoSink *sink)
     GST_WARNING_OBJECT (sink, "Failed to set HWND %x on renderer", sink->window_id);
     return;
   }
+  sink->is_new_window = FALSE;
 
   /* This tells the renderer where the window is located, needed to 
    * start drawing in the right place.  */
@@ -1355,6 +1359,14 @@ gst_dshowvideosink_stop (GstBaseSink * bsink)
   if (!sink->filter_graph) {
     GST_WARNING_OBJECT (sink, "Cannot destroy filter graph; it doesn't exist");
     return TRUE;
+  }
+  
+  /* If we created a new window, send the close message and wait until 
+   * it's closed in the window thread */
+  if (sink->is_new_window) {
+    SendMessage (sink->window_id, WM_CLOSE, NULL, NULL);
+    while (!sink->window_closed);
+    sink->is_new_window = FALSE;
   }
 
   /* Release the renderer */
